fixes the overflow hidden rule

--- a/src/sass/_homepage.scss
+++ b/src/sass/_homepage.scss
@@ -6,9 +6,9 @@
         width: 100%;
         max-width: 1500px;
         margin: 0 auto;
+        margin-bottom: 1.5rem;
         height: 100vh;
         display: flex;
-        overflow: hidden;
 
         .frame {
             width: 72%;
